rm unnecessary elements